--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="pt-md-full">
+
 	<header class="header fixed-md-top">
 		<div class="container-fluid container-md">
 
@@ -53,48 +54,288 @@
 
 				<div class="navbar-main__center mt-2 mt-sm-0">
 					<nav class="nav-user notice-position-right">
-						<div class="nav-user__form">
-							<button class="nav-user__search-btn search-btn" type="button" data-open-search="top-search">
-								<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
-							</button>
-							<form class="nav-user__search-group search-group hidden" id="top-search">
-								<input class="search-group__input input input-search input_sm input-radius_sm" type="search"
-											 placeholder="Поиск..." aria-label="Search" style="width: 100%;">
-								<button class="search-group__search search-btn search-btn_dark" type="submit">
-									<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
-								</button>
-								<button type="button" class="search-group__clear-btn clear-btn d-none">
-									<svg-icon type="clear"></svg-icon>
-								</button>
-							</form>
-						</div>
-						<a href="#" class="nav-user__link notice notice_sm">
-							<svg width="15" height="19" class="icon" viewBox="0 0 15 19">
-								<use xlink:href="../../public/icons/icons.svg#icon-user"/>
-							</svg>
-						</a>
-						<a href="#" class="nav-user__link notice notice_sm">
-							<svg width="19" height="19" class="icon" viewBox="0 0 19 19">
-								<use xlink:href="../../public/icons/icons.svg#icon-chat-dots"/>
-							</svg>
-						</a>
-						<a href="#" class="nav-user__link notice notice_sm">
-							<svg width="16" height="20" class="icon" viewBox="0 0 16 20">
-								<use xlink:href="../../public/icons/icons.svg#icon-bell"/>
-							</svg>
-						</a>
-						<a href="#" class="nav-user__link">
-							<svg width="14" height="20" class="icon" viewBox="0 0 14 20">
-								<use xlink:href="../../public/icons/icons.svg#icon-bookmarks"/>
-							</svg>
-						</a>
-						<a href="#" class="nav-user__link">
-							<svg width="19" height="19" class="icon" viewBox="0 0 19 19">
-								<use xlink:href="../../public/icons/icons.svg#icon-leave"/>
-							</svg>
-						</a>
-					</nav>
+						<ul class="nav-user__list">
+							<li class="nav-user__list-item">
+								<div class="nav-user__form">
+									<button class="nav-user__search-btn search-btn" type="button" data-open-search="top-search">
+										<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
+									</button>
+									<form class="nav-user__search-group search-group hidden" id="top-search">
+										<input class="search-group__input input input-search input_sm input-radius_sm" type="search"
+													 placeholder="Поиск..." aria-label="Search" style="width: 100%;">
+										<button class="search-group__search search-btn search-btn_dark" type="submit">
+											<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
+										</button>
+										<button type="button" class="search-group__clear-btn clear-btn d-none">
+											<svg-icon type="clear"></svg-icon>
+										</button>
+									</form>
+								</div>
+							</li>
+							<li class="nav-user__list-item">
+								<div class="btn-group">
+									<button class="nav-user__link notice notice_sm">
+										<svg width="15" height="19" class="icon" viewBox="0 0 15 19">
+											<use xlink:href="../../public/icons/icons.svg#icon-user"/>
+										</svg>
+									</button>
+								</div>
+							</li>
+							<li class="nav-user__list-item">
+								<div class="btn-group">
+									<div class="dropdown-menu notification-bar ">
+										<button class="notification-bar__btn btn btn-gray-450">Показать все ответы</button>
+										<ul class="notification-bar__list list-notification mt-3 scrollbar-custom">
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+										</ul>
+									</div>
+									<button href="#" class="nav-user__link notice notice_sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+										<svg width="19" height="19" class="icon" viewBox="0 0 19 19">
+											<use xlink:href="../../public/icons/icons.svg#icon-chat-dots"/>
+										</svg>
+									</button>
+								</div>
+							</li>
+							<li class="nav-user__list-item">
+								<div class="btn-group">
+									<div class="dropdown-menu notification-bar ">
+										<button class="notification-bar__btn btn btn-gray-450">Показать все ответы</button>
+										<ul class="notification-bar__list list-notification mt-3 scrollbar-custom">
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+										</ul>
+									</div>
+									<button href="#" class="nav-user__link notice notice_sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+										<svg width="16" height="20" class="icon" viewBox="0 0 16 20">
+											<use xlink:href="../../public/icons/icons.svg#icon-bell"/>
+										</svg>
+									</button>
+								</div>
 
+							</li>
+							<li class="nav-user__list-item">
+								<a href="#" class="nav-user__link">
+									<svg width="14" height="20" class="icon" viewBox="0 0 14 20">
+										<use xlink:href="../../public/icons/icons.svg#icon-bookmarks"/>
+									</svg>
+								</a>
+							</li>
+							<li class="nav-user__list-item">
+								<a href="#" class="nav-user__link">
+									<svg width="19" height="19" class="icon" viewBox="0 0 19 19">
+										<use xlink:href="../../public/icons/icons.svg#icon-leave"/>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</nav>
 				</div>
 				<div class="navbar-main__right ml-4">
 
