--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,6 @@
 </head>
 <body style="overflow-x:hidden;">
 <div class="pt-md-full">
-
 	<header class="header fixed-md-top">
 		<div class="container-fluid container-md">
 			<nav class="navbar-main navbar-expand-lg pl-0" id="header-nav">
@@ -52,32 +51,153 @@
 				</div>
 
 				<div class="navbar-main__center mt-2 mt-sm-0">
-					<nav class="nav-user">
-						<div class="nav-user__form">
-							<button class="nav-user__search-btn search-btn" type="button" data-open-search="top-search">
-								<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
-							</button>
-							<form class="nav-user__search-group search-group hidden" id="top-search">
-								<input class="search-group__input input input-search input_sm input-radius_sm" type="search"
-											 placeholder="Поиск..." aria-label="Search" style="width: 100%;">
-								<button class="search-group__search search-btn search-btn_dark" type="submit">
-									<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
-								</button>
-								<button type="button" class="search-group__clear-btn clear-btn d-none">
-									<svg-icon type="clear"></svg-icon>
-								</button>
-							</form>
-						</div>
-						<a href="#" class="nav-user__link">
-							<svg width="16" height="20" class="icon" viewBox="0 0 16 20">
-								<use xlink:href="../../public/icons/icons.svg#icon-bell"/>
-							</svg>
-						</a>
-						<a href="#" class="nav-user__link">
-							<svg width="14" height="20" class="icon" viewBox="0 0 14 20">
-								<use xlink:href="../../public/icons/icons.svg#icon-bookmarks"/>
-							</svg>
-						</a>
+					<nav class="nav-user notice-position-right">
+						<ul class="nav-user__list">
+							<li class="nav-user__list-item">
+								<div class="nav-user__form">
+									<button class="nav-user__search-btn search-btn" type="button" data-open-search="top-search">
+										<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
+									</button>
+									<form class="nav-user__search-group search-group hidden" id="top-search">
+										<input class="search-group__input input input-search input_sm input-radius_sm" type="search"
+													 placeholder="Поиск..." aria-label="Search" style="width: 100%;">
+										<button class="search-group__search search-btn search-btn_dark" type="submit">
+											<svg-icon type="search-2" height="21" width="21" viewBox="0 0 35 35"></svg-icon>
+										</button>
+										<button type="button" class="search-group__clear-btn clear-btn d-none">
+											<svg-icon type="clear"></svg-icon>
+										</button>
+									</form>
+								</div>
+							</li>
+							<li class="nav-user__list-item">
+								<div class="btn-group">
+									<div class="dropdown-menu notification-bar ">
+										<button class="notification-bar__btn btn btn-gray-450">Показать все ответы</button>
+										<ul class="notification-bar__list list-notification mt-3 scrollbar-custom">
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="list-notification__item">
+												<div class="message-item message-item_sm">
+													<div class="message-item__image notice">
+														<img src="../../public/images/ava-4.jpg" class="image" alt="user avatar">
+													</div>
+													<div class="message-item__left">
+														<div class="message-item__row">
+															<a href="#" class="message-item__user-name">Александр Франка</a>
+															<div class="message-item__post-info post-info post-info_sm">
+																<div class="post-info__date">
+																	<span class="ml-1">17.01.2020</span>
+																</div>
+																<span class="post-info__time">13:20</span>
+															</div>
+														</div>
+														<div class="message-item__row">
+															<a href="#" class="message-item__link-message">лвоыарлрвиалцвиа</a>
+														</div>
+													</div>
+												</div>
+											</li>
+										</ul>
+									</div>
+									<button href="#" class="nav-user__link notice notice_sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+										<svg width="16" height="20" class="icon" viewBox="0 0 16 20">
+											<use xlink:href="../../public/icons/icons.svg#icon-bell"/>
+										</svg>
+									</button>
+								</div>
+
+							</li>
+							<li class="nav-user__list-item">
+								<a href="#" class="nav-user__link">
+									<svg width="14" height="20" class="icon" viewBox="0 0 14 20">
+										<use xlink:href="../../public/icons/icons.svg#icon-bookmarks"/>
+									</svg>
+								</a>
+							</li>
+						</ul>
 					</nav>
 				</div>
 				<div class="navbar-main__right ml-4">
@@ -1485,10 +1605,9 @@
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="post-preview post-preview_video post-preview_video-sm">
-													<iframe class="post-preview__videos" src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A"
-																	frameborder="0"
-																	allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-																	allowfullscreen></iframe>
+													<div class="post-preview__image-wrapper">
+														<img src="../../public/images/image-video.jpg" class="post-preview__image" alt="image - preview video">
+													</div>
 													<div class="post-preview__main">
 														<div class="post-preview__header">
 															<!--											-->
@@ -1524,10 +1643,9 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="post-preview post-preview_video post-preview_video-sm">
-													<iframe class="post-preview__videos" src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A"
-																	frameborder="0"
-																	allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-																	allowfullscreen></iframe>
+													<div class="post-preview__image-wrapper">
+														<img src="../../public/images/image-video.jpg" class="post-preview__image" alt="image - preview video">
+													</div>
 													<div class="post-preview__main">
 														<div class="post-preview__header">
 															<!--											-->
@@ -1563,10 +1681,9 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="post-preview post-preview_video post-preview_video-sm">
-													<iframe class="post-preview__videos" src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A"
-																	frameborder="0"
-																	allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-																	allowfullscreen></iframe>
+													<div class="post-preview__image-wrapper">
+														<img src="../../public/images/image-video.jpg" class="post-preview__image" alt="image - preview video">
+													</div>
 													<div class="post-preview__main">
 														<div class="post-preview__header">
 															<!--						text-box-icon-label					-->
@@ -4471,6 +4588,7 @@
 	</nav>
 
 </footer>
+
 <script src="../scripts/main.js"></script>
 </body>
 </html>
